[package]
name = "arachne-incremental"
version = "0.1.0"
edition = "2021"
authors = ["Honkware"]
description = "Fast incremental NTFS change detection using USN journal"
license = "MIT"
repository = "https://github.com/Honkware/arachne-incremental"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
winapi = { version = "0.3", features = ["winnt", "winbase", "fileapi", "handleapi", "ntdef", "ioapiset", "errhandlingapi"] }
ntapi = "0.4"
chrono = { version = "0.4", features = ["clock"] }
glob = "0.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
